# python-scrapper-solid

./: README.md  initial  pyproject.toml
scrapper/: __main__.py  data_frame.py  parser.py  scrapper.py
